[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://qr_login_scene.gd" id="1"]

[node name="QRLoginScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.15, 0.25, 1)

[node name="BackgroundVideo" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
autoplay = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -400.0
offset_right = 600.0
offset_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "CONSOLE LOGIN"
horizontal_alignment = 1

[node name="QRContainer" type="Panel" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(600, 400)

[node name="QRImageContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/QRContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0

[node name="QRImage" type="TextureRect" parent="CenterContainer/VBoxContainer/QRContainer/QRImageContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 300)
expand_mode = 1
stretch_mode = 5
modulate = Color(1, 1, 1, 1)

[node name="QRText" type="Label" parent="CenterContainer/VBoxContainer/QRContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = 10.0
offset_right = 300.0
text = "Loading QR code..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Connecting to server..."
horizontal_alignment = 1
autowrap_mode = 3

[node name="TimerLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Time remaining: 5:00"
horizontal_alignment = 1

[node name="CancelButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Cancel"
